tests/lean/bug1.lean.expected.out
bug1.lean:9:7: error: type mismatch, expression
  λ (c : bool) (H : p → q → c), H H1 H2
has type
  ∀ (c : bool), (p → q → c) → c
but is expected to have type
  a
bug1.lean:13:7: error: type mismatch, expression
  λ (c : bool) (H : p → q → c), H H1 H2
has type
  ∀ (c : bool), (p → q → c) → c
but is expected to have type
  p ∧ p
bug1.lean:17:7: error: type mismatch, expression
  λ (c : bool) (H : p → q → c), H H1 H2
has type
  ∀ (c : bool), (p → q → c) → c
but is expected to have type
  q ∧ p
and_intro4 : ∀ (p q : bool), p → q → p ∧ q
